tests/NormalTests/paczka2/big_fuzzy/27421756.err
Error in line 1: A94 S492 89,4
Error in line 18: NRW2GKTwBp S557 18,5
Error in line 46: NRW2GKTwBp A50 80,6
Error in line 55: jEDc S492 63,8
Error in line 66: jEDc S557 14,6
Error in line 68: jEDc A94 17,3
Error in line 71: jEDc S557 69,9
Error in line 72: NRW2GKTwBp S492 77,5
Error in line 89: MbqENjNF A94 49,4
Error in line 111: jEDc S557 76,9
Error in line 120: iEbJNs2k A94 14,4
Error in line 121: iEbJNs2k A50 40,7
Error in line 127: jEDc S492 33,4
Error in line 126: A94 A50 37,0
Error in line 124: NRW2GKTwBp S557 39,2
Error in line 131: jEDc S557 53,5
Error in line 145: jEDc S492 9,7
Error in line 154: qSMjn S557 77,3
Error in line 147: jEDc A94 11,0
Error in line 159: jEDc S557 75,8
Error in line 164: jEDc S492 83,8
Error in line 166: jEDc A50 6,0
Error in line 170: jEDc A94 33,5
Error in line 187: iEbJNs2k A50 21,3
Error in line 185: qSMjn S557 4,5
Error in line 195: qSMjn A94 62,8
Error in line 201: jEDc Sx92 283,9
Error in line 200: jEDc S492 76,1
Error in line 209: qSMjn A50 3,5
Error in line 217: qSMjn S492 70,2
Error in line 227: MbqENjNF A50 63,64
Error in line 229: jEDc A50 -1,4
Error in line 230: A94 S557 13,1
Error in line 223: jEDc A50 20,7
Error in line 236: jEDc S492 61,9
Error in line 237: MbqENjNF A50 247,3
Error in line 247: A94 S492 22,0
